--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,8 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-toml
+    -   id: double-quote-string-fixer
+    -   id: requirements-txt-fixer
 -   repo: https://github.com/asottile/reorder_python_imports
     rev: v3.9.0
     hooks:
